# secret-vault

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: audit.py  auth.py  config.py  crypto.py  db.py  errors.py  main.py  models.py  rate_limit.py  schemas.py  static.py  tokens.py  vault.py
app/scripts/: init_vault.py
tests/: test_crypto.py  test_secrets_api.py  test_vault_state.py  test_wrap_tokens.py
