[tool.poetry]
name = "secret-vault"
version = "0.1.0"
description = "Local self-hosted AES-GCM secret vault with seal/unseal and wrap tokens."
authors = ["Secret Vault Maintainers <maintainers@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.3"
uvicorn = { version = "0.30.1", extras = ["standard"] }
SQLAlchemy = "2.0.31"
pydantic = "2.7.4"
pydantic-settings = "2.3.4"
cryptography = "42.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
httpx = "0.27.0"
ruff = "0.5.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
